// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal should render properly with the necessary props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfirmModal
    active={false}
    content="this is a test confirm modal"
    onCancel={[Function]}
    onConfirm={[MockFunction]}
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "active": false,
      "buttons": Array [
        Object {
          "action": [Function],
          "label": "Não",
        },
        Object {
          "action": [MockFunction],
          "label": "Sim",
        },
      ],
      "cancel": null,
      "content": "this is a test confirm modal",
      "hasButtons": true,
      "title": "Confirmação",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "active": false,
        "buttons": Array [
          Object {
            "action": [Function],
            "label": "Não",
          },
          Object {
            "action": [MockFunction],
            "label": "Sim",
          },
        ],
        "cancel": null,
        "content": "this is a test confirm modal",
        "hasButtons": true,
        "title": "Confirmação",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ConfirmModal should render with a new title name 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfirmModal
    active={false}
    content="this is a test confirm modal"
    onCancel={[Function]}
    onConfirm={[MockFunction]}
    title="this is a confirm modal title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "active": false,
      "buttons": Array [
        Object {
          "action": [Function],
          "label": "Não",
        },
        Object {
          "action": [MockFunction],
          "label": "Sim",
        },
      ],
      "cancel": null,
      "content": "this is a test confirm modal",
      "hasButtons": true,
      "title": "this is a confirm modal title",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "active": false,
        "buttons": Array [
          Object {
            "action": [Function],
            "label": "Não",
          },
          Object {
            "action": [MockFunction],
            "label": "Sim",
          },
        ],
        "cancel": null,
        "content": "this is a test confirm modal",
        "hasButtons": true,
        "title": "this is a confirm modal title",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
